# laya-backbone

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  ALEMBIC_MIGRATION_VERIFICATION.md  BUG_ANALYSIS.md  BUNDLE_SIZE_ANALYSIS_SUMMARY.md  DATA_INTEGRITY_CHECKS.md  DATA_INTEGRITY_IMPLEMENTATION.md  DOCKER-HEALTHCHECKS.md  DOCKER-QUICKSTART.md  Makefile  PILOT_DATA_COLLECTION_TEMPLATE.md  PILOT_ONBOARDING_GUIDE.md  PILOT_ONBOARDING_IMPLEMENTATION.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_COMPARISON.md  SEED_CLI_COMMANDS.md  SEED_IDEMPOTENCY_IMPLEMENTATION.md  SHARED_SECRET_IMPLEMENTATION.md  SUBTASK_036-3-1_COMPLETION_SUMMARY.md  SUBTASK_036-3-2_COMPLETION_SUMMARY.md  SUBTASK_036-3-3_COMPLETION_SUMMARY.md  SUBTASK_039-3-1_SUMMARY.md  SUBTASK_039-3-2_SUMMARY.md  SUBTASK_3_1_COMPLETION_SUMMARY.md  SUBTASK_5-4_SUMMARY.md  TESTING.md  VERIFICATION_036-2-2.md  VERIFICATION_GUIDE.md  composer.json  docker-compose.yml  penetration_test.py  phpunit.xml  playwright.config.js  security-audit.sh  subtask-8-2-pip-audit-findings.md  test_config_migration.py  verify_log_levels.py  (+1 more)
ai-service/: .coverage  .env  .env.example  .env.production.example  CONNECTION_POOLING_IMPLEMENTATION.md  MANUAL-VERIFICATION.md  MESSAGING_AUTHORIZATION_AUDIT.md  N1_QUERY_FIXES_COMPLETE.md  PENETRATION_TEST_REPORT.md  SECURITY.md  SUBTASK-8-3-VERIFICATION.md  SUBTASK-8-4-RATE-LIMITING-TEST.md  alembic.ini  manual_idor_tests.sh  penetration_test.py  pyproject.toml  requirements.txt  test_admin_revoke.py  test_rate_limiting_api.py  test_results.txt  verify_rate_limiting.sh  verify_uuid_schema.py
ai-service/ai-service/: IDOR_SECURITY_AUDIT.md
ai-service/alembic/: env.py
ai-service/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  redis_client.py
ai-service/docs/: ALERTS_README.md  ALERT_ON_FAILURE.md  AUTHORIZATION.md  AUTHORIZATION_PATTERNS.md  BATCH_ENDPOINTS.md  BATCH_ENDPOINTS_IMPLEMENTATION.md  BATCH_ENDPOINTS_QUICK_START.md  CONNECTION_POOL_MONITORING.md  FIELD_SELECTION.md  FIELD_SELECTION_IMPLEMENTATION.md  GZIP_COMPRESSION.md  GZIP_COMPRESSION_IMPLEMENTATION.md  JWT_SECURITY.md  NOTIFICATION_QUEUE_MONITORING.md  NOTIFICATION_QUEUE_README.md  QUERY_OPTIMIZATION_SUMMARY.md  SECURITY_AUDIT_TOKEN_BLACKLIST.md  SNAPSHOT_BEHAVIOR.md  UUID_HANDLING.md  connection_pooling_readme.md  connection_pooling_tuning.md  database-optimization.md  jwt_security_audit.md  n1-query-optimization.md  query-optimization-examples.md  static_asset_caching.md  static_asset_caching_implementation.md
ai-service/scripts/: seed.py  (+6 more)
(+1471 files in other folders)
